assetic cssrewrite dev/prod

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,8 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        {% stylesheets 'css/*' output='dist/css/all.css' filter='cssrewrite'%}
+            {% block stylesheets %}
+                <link rel="stylesheet" href="{{ asset_url }}"/>
+            {% endblock %}
+        {% endstylesheets %}
     </head>
     <body>
         {% block body %}{% endblock %}
