--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -5,6 +5,6 @@
 body{
     padding: 200px;
     border: 15px solid #fff;
-    background-image:url('../uploads/originals/f9ebfc48ff6a14b8eccc011ee36ca54f647cdeb3552cd155c1ec6.png');
+    background-image:url('../uploads/originals/7e70bbc4f32e0a9a0bd57c3318f85399f5a1d4be552cdab2702fa.jpeg');
     background-size: cover;
 }
