added listener and error 404 template

--- a/app/Resources/views/trad/index.html.twig
+++ b/app/Resources/views/trad/index.html.twig
@@ -8,5 +8,7 @@
     <a href="{{ url('upload') }}">Uploads</a>
 
     <a href="{{ url('trad',{'_locale':'fr'}) }}">Switch to Fr</a>
+    <a href="{{ url('trad',{'_locale':'en'}) }}">Switch to EN</a>
+    <a href="{{ url('trad',{'_locale':'it'}) }}">Switch to IT</a>
 
 {% endblock %}
